# shortcut-messenger

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  mypy.ini  pyproject.toml
core/: env.py  settings.py  urls.py
messenger/: shortcut.py  shortcut_reporting.py  slack.py
messenger/management/commands/: shortcut_data.py
messenger/migrations/: 0001_custom_user.py  0002_create_iteration_reports.py
messenger/models/: __init__.py  common.py  shortcut.py
messenger/templates/: base.html
messenger/templates/iteration_reports/: create.html  list.html  show.html
messenger/templatetags/: dictkey.py  shortcut.py
messenger/views/: common.py  reports.py  shortcut.py
