[tool.poetry]
name = "shortcut-messenger"
version = "0.1.0"
description = "A Django application for sending better Shortcut notifications to Slack"
authors = ["Chris Muthig <camuthig@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.1"
python-dotenv = "^0.19.2"
slack-bolt = "^1.11.2"

[tool.poetry.dev-dependencies]
bandit = "^1.7.1"
black = "^21.12b0"
pre-commit = "^2.17.0"
flake8 = "^4.0.1"
mypy = "^0.931"
django-stubs = "^1.9.0"
types-requests = "^2.27.7"

[tool.black]
line-length = 119

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
